feat: finish changes

--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,10 @@
 # Site settings
 title: 'Research UAV'
-email: contact@reserachuav.com
+email: contact@researchuav.com
 description: "Research UAV - Building the Future with Drones"
 keywords: "Research UAV, Drones, Machine Learning, Future"
 baseurl: ""
-url: "https://reserachuav.com"
+url: "https://researchuav.com"
 
 # Build settings
 markdown: kramdown
